Style: Fix image spacing around images in header

--- a/styles/components/header.styles.scss
+++ b/styles/components/header.styles.scss
@@ -24,11 +24,11 @@
     max-width: 80rem;
     justify-content: center;
     &__image {
-      margin: 2.4rem 3.2rem;
+      margin: 2.4rem 4rem;
       height: 5.6rem;
       max-width: 8rem;
       @include respond(tab-port) {
-        margin: 1.8rem 2.4rem;
+        margin: 1.8rem 4rem;
         height: 4rem;
         max-width: 5.6rem;
       }
